# seniorcapstone

./: .gitignore  README.md  package-lock.json  package.json
Python/: .gitignore  README.md  app.py  create_db.py  db_dump.sql  dump_db.py  pyproject.toml
my-app/: package-lock.json  package.json
my-app/src/: App.js  ComplexButton.js  K_2.js  index.js
my-app/src/components/: Background.js  Button.js  FetchFromApi.js  FetchFromApiAsync.js  GradeButtons.js  HabitatComponent.js  HomeButton.js  LinkButton.js  RealButtonTest.js  RouterButton.js
my-app/src/pages/: Animal.js  Habitat.js  Habitats.js  Home.js  Quiz.js  habitats.js  home.js
