[tool.poetry]
name = "aaron-capstone-server"
version = "0.1.0"
description = ""
authors = ["Aaron <ajs541stand@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
